ui/resources-cfg.stderr
error[E0609]: no field `o1` on type `__rtic_internal_initResources<'_>`
  --> $DIR/resources-cfg.rs:48:21
   |
48 |         c.resources.o1;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o4` on type `__rtic_internal_initResources<'_>`
  --> $DIR/resources-cfg.rs:49:21
   |
49 |         c.resources.o4;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o5` on type `__rtic_internal_initResources<'_>`
  --> $DIR/resources-cfg.rs:50:21
   |
50 |         c.resources.o5;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o6` on type `__rtic_internal_initResources<'_>`
  --> $DIR/resources-cfg.rs:51:21
   |
51 |         c.resources.o6;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s3` on type `__rtic_internal_initResources<'_>`
  --> $DIR/resources-cfg.rs:52:21
   |
52 |         c.resources.s3;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o2` on type `__rtic_internal_idleResources<'_>`
  --> $DIR/resources-cfg.rs:59:21
   |
59 |         c.resources.o2;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o4` on type `__rtic_internal_idleResources<'_>`
  --> $DIR/resources-cfg.rs:60:21
   |
60 |         c.resources.o4;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s1` on type `__rtic_internal_idleResources<'_>`
  --> $DIR/resources-cfg.rs:61:21
   |
61 |         c.resources.s1;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s3` on type `__rtic_internal_idleResources<'_>`
  --> $DIR/resources-cfg.rs:62:21
   |
62 |         c.resources.s3;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o3` on type `__rtic_internal_uart0Resources<'_>`
  --> $DIR/resources-cfg.rs:69:21
   |
69 |         c.resources.o3;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s1` on type `__rtic_internal_uart0Resources<'_>`
  --> $DIR/resources-cfg.rs:70:21
   |
70 |         c.resources.s1;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s2` on type `__rtic_internal_uart0Resources<'_>`
  --> $DIR/resources-cfg.rs:71:21
   |
71 |         c.resources.s2;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s3` on type `__rtic_internal_uart0Resources<'_>`
  --> $DIR/resources-cfg.rs:72:21
   |
72 |         c.resources.s3;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s2` on type `__rtic_internal_uart1Resources<'_>`
  --> $DIR/resources-cfg.rs:77:21
   |
77 |         c.resources.s2;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o5` on type `__rtic_internal_uart1Resources<'_>`
  --> $DIR/resources-cfg.rs:78:21
   |
78 |         c.resources.o5;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`
